drm/exynos: exynos7_drm_decon: properly clear channels during bind (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -29608,6 +29608,7 @@
 	patches.suse/drm-msm-adreno-Use-IRQF_NO_AUTOEN-flag-in-request_ir.patch
 	patches.suse/drm-msm-gpu-Check-the-status-of-registration-to-PM-Q.patch
 	patches.suse/drm-exynos-exynos7_drm_decon-fix-uninitialized-crtc-.patch
+	patches.suse/drm-exynos-exynos7_drm_decon-properly-clear-channels.patch
 	patches.suse/drm-mediatek-Fix-child-node-refcount-handling-in-ear.patch
 	patches.suse/drm-msm-dpu-cast-crtc_clk-calculation-to-u64-in-_dpu.patch
 	patches.suse/drm-amd-display-Fix-brightness-level-not-retained-ov.patch
