drm/amd: Check whether secure display TA loaded successfully (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34759,6 +34759,7 @@
 	patches.suse/drm-amd-display-Properly-clear-SCL_-_FILTER_CONTROL-.patch
 	patches.suse/drm-amd-display-Properly-disable-scaling-on-DCE6.patch
 	patches.suse/drm-amd-display-Disable-scaling-on-DCE6-for-now.patch
+	patches.suse/drm-amd-Check-whether-secure-display-TA-loaded-succe.patch
 	patches.suse/bpf-Fix-metadata_dst-leak-__bpf_redirect_neigh_v-4-6.patch
 	patches.suse/bpf-Avoid-RCU-context-warning-when-unpinning-htab-wi.patch
 	patches.suse/selftests-bpf-Add-test-for-unpinning-htab-with-inter.patch
