--- a/series.conf
+++ b/series.conf
@@ -34773,6 +34773,7 @@
 	patches.suse/drm-amdgpu-use-atomic-functions-with-memory-barriers.patch
 	patches.suse/drm-amd-powerplay-Fix-CIK-shutdown-temperature.patch
 	patches.suse/drm-bridge-lt9211-Drop-check-for-last-nibble-of-vers.patch
+	patches.suse/drm-rockchip-vop2-use-correct-destination-rectangle-.patch
 	patches.suse/accel-qaic-Treat-remaining-0-as-error-in-find_and_ma.patch
 	patches.suse/ALSA-firewire-amdtp-stream-fix-enum-kernel-doc-warni.patch
 	patches.suse/ALSA-usb-audio-Fix-NULL-pointer-deference-in-try_to_.patch
