--- a/series.conf
+++ b/series.conf
@@ -34769,6 +34769,7 @@
 	patches.suse/usbnet-Fix-using-smp_processor_id-in-preemptible-cod.patch
 	patches.suse/r8152-add-error-handling-in-rtl8152_driver_init.patch
 	patches.suse/net-usb-lan78xx-fix-use-of-improperly-initialized-de.patch
+	patches.suse/drm-i915-guc-Skip-communication-warning-on-reset-in-.patch
 	patches.suse/accel-qaic-Treat-remaining-0-as-error-in-find_and_ma.patch
 	patches.suse/ALSA-firewire-amdtp-stream-fix-enum-kernel-doc-warni.patch
 	patches.suse/ALSA-usb-audio-Fix-NULL-pointer-deference-in-try_to_.patch
