--- a/series.conf
+++ b/series.conf
@@ -34813,6 +34813,7 @@
 	patches.suse/arm64-mm-avoid-always-making-PTE-dirty-in-pte_mkwrite.patch
 	patches.suse/spi-spi-nxp-fspi-add-extra-delay-after-dll-locked.patch
 	patches.suse/firmware-arm_scmi-Fix-premature-SCMI_XFER_FLAG_IS_RA.patch
+	patches.suse/xhci-dbc-enable-back-DbC-in-resume-if-it-was-enabled.patch
 
 	########################################################
 	# end of sorted patches
