--- a/series.conf
+++ b/series.conf
@@ -34716,6 +34716,7 @@
 	patches.suse/iio-consumers-Fix-offset-handling-in-iio_convert_raw.patch
 	patches.suse/iio-imu-inv_icm42600-Drop-redundant-pm_runtime-reini.patch
 	patches.suse/bus-mhi-host-Do-not-use-uninitialized-dev-pointer-in.patch
+	patches.suse/phy-cdns-dphy-Store-hs_clk_rate-and-return-it.patch
 	patches.suse/phy-rockchip-naneng-combphy-Enable-U3-OTG-port-for-R.patch
 	patches.suse/dmaengine-Fix-dma_async_tx_descriptor-tx_submit-docu.patch
 	patches.suse/PCI-ERR-Fix-uevent-on-failure-to-recover.patch
