--- a/series.conf
+++ b/series.conf
@@ -27079,6 +27079,7 @@
 	patches.suse/iio-Fix-the-sorting-functionality-in-iio_gts_build_a.patch
 	patches.suse/iio-frequency-adrf6780-rm-clk-provider-include.patch
 	patches.suse/driver-iio-add-missing-checks-on-iio_info-s-callback.patch
+	patches.suse/misc-fastrpc-Add-missing-dev_err-newlines.patch
 	patches.suse/interconnect-qcom-qcm2290-Fix-mas_snoc_bimc-RPM-mast.patch
 	patches.suse/dev-parport-fix-the-array-out-of-bounds-risk.patch
 	patches.suse/i2c-i801-Add-support-for-Intel-Arrow-Lake-H.patch
