--- a/series.conf
+++ b/series.conf
@@ -34696,6 +34696,7 @@
 	patches.suse/crypto-hisilicon-qm-set-NULL-to-qm-debug.qm_diff_reg.patch
 	patches.suse/hwrng-ks-sa-fix-division-by-zero-in-ks_sa_rng_init.patch
 	patches.suse/HID-intel-ish-ipc-Remove-redundant-ready-check-after.patch
+	patches.suse/mtd-rawnand-fsmc-Default-to-autodetect-buswidth.patch
 	patches.suse/mtd-rawnand-omap2-fix-device-leak-on-probe-failure.patch
 	patches.suse/serial-max310x-Add-error-checking-in-probe.patch
 	patches.suse/tty-n_gsm-Don-t-block-input-queue-by-waiting-MSC.patch
