--- a/series.conf
+++ b/series.conf
@@ -34815,6 +34815,7 @@
 	patches.suse/firmware-arm_scmi-Fix-premature-SCMI_XFER_FLAG_IS_RA.patch
 	patches.suse/xhci-dbc-enable-back-DbC-in-resume-if-it-was-enabled.patch
 	patches.suse/serial-8250_dw-handle-reset-control-deassert-error.patch
+	patches.suse/misc-fastrpc-Fix-dma_buf-object-leak-in-fastrpc_map_.patch
 
 	########################################################
 	# end of sorted patches
