PCI: j721e: Enable ACSPCIE Refclk if "ti,syscon-acspcie-proxy-ctrl" exists (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -28394,6 +28394,7 @@
 	patches.suse/PCI-dra7xx-Fix-threaded-IRQ-request-for-dra7xx-pcie-.patch
 	patches.suse/PCI-dra7xx-Fix-error-handling-when-IRQ-request-fails.patch
 	patches.suse/PCI-imx6-Fix-missing-call-to-phy_power_off-in-error-.patch
+	patches.suse/PCI-j721e-Enable-ACSPCIE-Refclk-if-ti-syscon-acspcie.patch
 	patches.suse/PCI-cadence-Extract-link-setup-sequence-from-cdns_pc.patch
 	patches.suse/PCI-cadence-Set-cdns_pcie_host_init-global.patch
 	patches.suse/PCI-j721e-Add-reset-GPIO-to-struct-j721e_pcie.patch
