--- a/series.conf
+++ b/series.conf
@@ -34719,6 +34719,7 @@
 	patches.suse/phy-cdns-dphy-Store-hs_clk_rate-and-return-it.patch
 	patches.suse/phy-rockchip-naneng-combphy-Enable-U3-OTG-port-for-R.patch
 	patches.suse/phy-cadence-cdns-dphy-Fix-PLL-lock-and-O_CMN_READY-p.patch
+	patches.suse/phy-cadence-cdns-dphy-Update-calibration-wait-time-f.patch
 	patches.suse/dmaengine-Fix-dma_async_tx_descriptor-tx_submit-docu.patch
 	patches.suse/PCI-ERR-Fix-uevent-on-failure-to-recover.patch
 	patches.suse/PCI-AER-Fix-missing-uevent-on-recovery-when-a-reset-.patch
