--- a/series.conf
+++ b/series.conf
@@ -34559,6 +34559,7 @@
 	patches.suse/spi-mtk-snfi-Remove-redundant-semicolons.patch
 	patches.suse/spi-cadence-quadspi-Flush-posted-register-writes-bef.patch
 	patches.suse/spi-cadence-quadspi-Flush-posted-register-writes-bef-1ad5576.patch
+	patches.suse/mmc-core-SPI-mode-remove-cmd7.patch
 	patches.suse/mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
 	patches.suse/power-supply-cw2015-Fix-a-alignment-coding-style-iss.patch
 	patches.suse/power-supply-max77976_charger-fix-constant-current-r.patch
