--- a/series.conf
+++ b/series.conf
@@ -34785,6 +34785,7 @@
 	patches.suse/selftests-bpf-Add-test-for-unpinning-htab-with-inter.patch
 	patches.suse/rtc-x1205-Fix-Xicor-X1205-vendor-prefix.patch
 	patches.suse/rtc-optee-fix-memory-leak-on-driver-removal.patch
+	patches.suse/rtc-interface-Fix-long-standing-race-when-setting-al.patch
 	patches.suse/NFSD-Define-a-proc_layoutcommit-for-the-FlexFiles-layout-type.patch
 	patches.suse/usbnet-Fix-using-smp_processor_id-in-preemptible-cod.patch
 	patches.suse/r8152-add-error-handling-in-rtl8152_driver_init.patch
