--- a/series.conf
+++ b/series.conf
@@ -29769,6 +29769,7 @@
 	patches.suse/PCI-Add-reset_subordinate-to-reset-hierarchy-below-b.patch
 	patches.suse/PCI-Detect-and-trust-built-in-Thunderbolt-chips.patch
 	patches.suse/PCI-Add-ACS-quirk-for-Wangxun-FF5xxx-NICs.patch
+	patches.suse/PCI-endpoint-Remove-surplus-return-statement-from-pc.patch
 	patches.suse/PCI-endpoint-Clear-secondary-not-primary-EPC-in-pci_.patch
 	patches.suse/PCI-imx6-Fix-suspend-resume-support-on-i.MX6QDL.patch
 	patches.suse/PCI-j721e-Deassert-PERST-after-a-delay-of-PCIE_T_PVP.patch
