serial: 8250_dw: handle reset control deassert error (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34814,6 +34814,7 @@
 	patches.suse/spi-spi-nxp-fspi-add-extra-delay-after-dll-locked.patch
 	patches.suse/firmware-arm_scmi-Fix-premature-SCMI_XFER_FLAG_IS_RA.patch
 	patches.suse/xhci-dbc-enable-back-DbC-in-resume-if-it-was-enabled.patch
+	patches.suse/serial-8250_dw-handle-reset-control-deassert-error.patch
 
 	########################################################
 	# end of sorted patches
