PCI: endpoint: pci-epf-test: Add NULL check for DMA channels before release (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34726,6 +34726,7 @@
 	patches.suse/PCI-AER-Support-errors-introduced-by-PCIe-r6.0.patch
 	patches.suse/PCI-sysfs-Ensure-devices-are-powered-for-config-read.patch
 	patches.suse/PCI-IOV-Add-PCI-rescan-remove-locking-when-enabling-.patch
+	patches.suse/PCI-endpoint-pci-epf-test-Add-NULL-check-for-DMA-cha.patch
 	patches.suse/PCI-tegra194-Fix-broken-tegra_pcie_ep_raise_msi_irq.patch
 	patches.suse/PCI-tegra194-Handle-errors-in-BPMP-response.patch
 	patches.suse/PCI-keystone-Use-devm_request_irq-to-free-ks-pcie-er.patch
