--- a/series.conf
+++ b/series.conf
@@ -34627,6 +34627,7 @@
 	patches.suse/media-st-delta-avoid-excessive-stack-usage.patch
 	patches.suse/media-cx18-Add-missing-check-after-DMA-map.patch
 	patches.suse/media-pci-ivtv-Add-missing-check-after-DMA-map.patch
+	patches.suse/media-nxp-imx8-isi-Drop-unused-argument-to-mxc_isi_c.patch
 	patches.suse/media-i2c-mt9v111-fix-incorrect-type-for-ret.patch
 	patches.suse/media-rc-fix-races-with-imon_disconnect.patch
 	patches.suse/media-uvcvideo-Mark-invalid-entities-with-id-UVC_INV.patch
