--- a/series.conf
+++ b/series.conf
@@ -34817,6 +34817,7 @@
 	patches.suse/serial-8250_dw-handle-reset-control-deassert-error.patch
 	patches.suse/misc-fastrpc-Fix-dma_buf-object-leak-in-fastrpc_map_.patch
 	patches.suse/most-usb-Fix-use-after-free-in-hdm_disconnect.patch
+	patches.suse/most-usb-hdm_probe-Fix-calling-put_device-before-dev.patch
 
 	########################################################
 	# end of sorted patches
