--- a/series.conf
+++ b/series.conf
@@ -34807,6 +34807,7 @@
 	patches.suse/ASoC-nau8821-Add-DMI-quirk-to-bypass-jack-debounce-c.patch
 	patches.suse/HID-hid-input-only-ignore-0-battery-events-for-digit.patch
 	patches.suse/HID-multitouch-fix-name-of-Stylus-input-devices.patch
+	patches.suse/net-usb-rtl8150-Fix-frame-padding.patch
 	patches.suse/can-bxcan-bxcan_start_xmit-use-can_dev_dropped_skb-i.patch
 	patches.suse/can-netlink-can_changelink-allow-disabling-of-automa.patch
 	patches.suse/arm64-mm-avoid-always-making-PTE-dirty-in-pte_mkwrite.patch
