--- a/series.conf
+++ b/series.conf
@@ -34816,6 +34816,7 @@
 	patches.suse/xhci-dbc-enable-back-DbC-in-resume-if-it-was-enabled.patch
 	patches.suse/serial-8250_dw-handle-reset-control-deassert-error.patch
 	patches.suse/misc-fastrpc-Fix-dma_buf-object-leak-in-fastrpc_map_.patch
+	patches.suse/most-usb-Fix-use-after-free-in-hdm_disconnect.patch
 
 	########################################################
 	# end of sorted patches
