--- a/series.conf
+++ b/series.conf
@@ -34811,6 +34811,7 @@
 	patches.suse/can-bxcan-bxcan_start_xmit-use-can_dev_dropped_skb-i.patch
 	patches.suse/can-netlink-can_changelink-allow-disabling-of-automa.patch
 	patches.suse/arm64-mm-avoid-always-making-PTE-dirty-in-pte_mkwrite.patch
+	patches.suse/spi-spi-nxp-fspi-add-extra-delay-after-dll-locked.patch
 	patches.suse/firmware-arm_scmi-Fix-premature-SCMI_XFER_FLAG_IS_RA.patch
 
 	########################################################
