--- a/series.conf
+++ b/series.conf
@@ -34637,6 +34637,7 @@
 	patches.suse/net-mana-Use-page-pool-fragments-for-RX-buffers-inst.patch
 	patches.suse/wifi-mwifiex-send-world-regulatory-domain-to-driver.patch
 	patches.suse/wifi-mt76-fix-potential-memory-leak-in-mt76_wmac_pro.patch
+	patches.suse/wifi-mt76-mt7921u-Add-VID-PID-for-Netgear-A7500.patch
 	patches.suse/wifi-mac80211-fix-Rx-packet-handling-when-pubsta-inf.patch
 	patches.suse/wifi-rtlwifi-rtl8192cu-Don-t-claim-USB-ID-07b8-8188.patch
 	patches.suse/wifi-rtw89-avoid-circular-locking-dependency-in-ser_.patch
