--- a/series.conf
+++ b/series.conf
@@ -32051,6 +32051,7 @@
 	patches.suse/IB-mad-Check-available-slots-before-posting-receive-.patch
 	patches.suse/s390-tty-Fix-a-potential-memory-leak-bug.patch
 	patches.suse/mfd-sm501-Switch-to-BIT-to-mitigate-integer-overflow.patch
+	patches.suse/mfd-intel_soc_pmic_chtdc_ti-Drop-unneeded-assignment.patch
 	patches.suse/mfd-tps65219-Remove-TPS65219_REG_TI_DEV_ID-check.patch
 	patches.suse/mfd-ene-kb3930-Fix-a-potential-NULL-pointer-derefere.patch
 	patches.suse/Revert-leds-pca955x-Remove-the-unused-function-pca95.patch
