--- a/series.conf
+++ b/series.conf
@@ -34723,6 +34723,7 @@
 	patches.suse/dmaengine-Fix-dma_async_tx_descriptor-tx_submit-docu.patch
 	patches.suse/PCI-ERR-Fix-uevent-on-failure-to-recover.patch
 	patches.suse/PCI-AER-Fix-missing-uevent-on-recovery-when-a-reset-.patch
+	patches.suse/PCI-AER-Support-errors-introduced-by-PCIe-r6.0.patch
 	patches.suse/PCI-sysfs-Ensure-devices-are-powered-for-config-read.patch
 	patches.suse/PCI-IOV-Add-PCI-rescan-remove-locking-when-enabling-.patch
 	patches.suse/PCI-tegra194-Fix-broken-tegra_pcie_ep_raise_msi_irq.patch
