PCI: j721e: Fix programming sequence of "strap" settings (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34729,6 +34729,7 @@
 	patches.suse/PCI-endpoint-pci-epf-test-Add-NULL-check-for-DMA-cha.patch
 	patches.suse/PCI-tegra194-Fix-broken-tegra_pcie_ep_raise_msi_irq.patch
 	patches.suse/PCI-tegra194-Handle-errors-in-BPMP-response.patch
+	patches.suse/PCI-j721e-Fix-programming-sequence-of-strap-settings.patch
 	patches.suse/PCI-keystone-Use-devm_request_irq-to-free-ks-pcie-er.patch
 	patches.suse/PCI-rcar-host-Drop-PMSR-spinlock.patch
 	patches.suse/PCI-tegra-Fix-devm_kcalloc-argument-order-for-port-p.patch
