lib/crypto/curve25519-hacl64: Disable KASAN with clang-17 and older (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33304,6 +33304,7 @@
 	patches.suse/ata-pata_via-Force-PIO-for-ATAPI-devices-on-VT6415-V.patch
 	patches.suse/ata-pata_cs5536-fix-build-on-32-bit-UML.patch
 	patches.suse/selinux-fix-selinux_xfrm_alloc_user-to-set-correct-ctx_len.patch
+	patches.suse/lib-crypto-curve25519-hacl64-Disable-KASAN-with-clan.patch
 	patches.suse/cgroup-freezer-fix-incomplete-freezing-when-attaching-task.patch
 	patches.suse/hwmon-ftsteutates-Fix-TOCTOU-race-in-fts_read.patch
 	patches.suse/hwmon-occ-Rework-attribute-registration-for-stack-us.patch
