--- a/series.conf
+++ b/series.conf
@@ -30596,6 +30596,7 @@
 	patches.suse/wifi-rtlwifi-pci-wait-for-firmware-loading-before-re.patch
 	patches.suse/af_unix-Add-a-prompt-to-CONFIG_AF_UNIX_OOB.patch
 	patches.suse/udp-Deal-with-race-between-UDP-socket-address-change-and-r.patch
+	patches.suse/PCI-Add-PCI_VDEVICE_SUB-helper-macro.patch
 	patches.suse/team-prevent-adding-a-device-which-is-already-a-team.patch
 	patches.suse/ax25-rcu-protect-dev-ax25_ptr.patch
 	patches.suse/net-wwan-iosm-Fix-hibernation-by-re-binding-the-driv.patch
