drm/panthor: Ensure MCU is disabled on suspend (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55985,6 +55985,7 @@
 	patches.suse/ixgbe-fix-too-early-devlink_free-in-ixgbe_remove.patch
 	patches.suse/drm-amdgpu-fix-handling-of-harvesting-for-ip_discove.patch
 	patches.suse/drm-amdgpu-fix-gfx12-mes-packet-status-return-check.patch
+	patches.suse/drm-panthor-Ensure-MCU-is-disabled-on-suspend.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
 	########################################################
