drm/amdgpu: fix handling of harvesting for ip_discovery firmware (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55983,6 +55983,7 @@
 	patches.suse/ixgbevf-fix-mailbox-API-compatibility-by-negotiating.patch
 	patches.suse/ixgbe-handle-IXGBE_VF_FEATURES_NEGOTIATE-mbox-cmd.patch
 	patches.suse/ixgbe-fix-too-early-devlink_free-in-ixgbe_remove.patch
+	patches.suse/drm-amdgpu-fix-handling-of-harvesting-for-ip_discove.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
 	########################################################
