drm/amd/display: use GFP_NOWAIT for allocation in interrupt handler (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55990,6 +55990,7 @@
 	patches.suse/accel-qaic-Synchronize-access-to-DBC-request-queue-h.patch
 	patches.suse/drm-xe-guc-Check-GuC-running-state-before-deregister.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
+	patches.suse/drm-amd-display-use-GFP_NOWAIT-for-allocation-in-int.patch
 
 	########################################################
 	# end of sorted patches
