accel/qaic: Synchronize access to DBC request queue head & tail pointer (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55987,6 +55987,7 @@
 	patches.suse/drm-amdgpu-fix-gfx12-mes-packet-status-return-check.patch
 	patches.suse/drm-panthor-Ensure-MCU-is-disabled-on-suspend.patch
 	patches.suse/accel-qaic-Fix-bootlog-initialization-ordering.patch
+	patches.suse/accel-qaic-Synchronize-access-to-DBC-request-queue-h.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
 	########################################################
