serial: 8250_mtk: Enable baud clock and manage in runtime PM (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55996,6 +55996,7 @@
 	patches.suse/drm-panic-Fix-qr_code-ensure-vmargin-is-positive.patch
 	patches.suse/xhci-dbc-fix-bogus-1024-byte-prefix-if-ttyDBC-read-r.patch
 	patches.suse/serial-sc16is7xx-remove-useless-enable-of-enhanced-f.patch
+	patches.suse/serial-8250_mtk-Enable-baud-clock-and-manage-in-runt.patch
 
 	########################################################
 	# end of sorted patches
