--- a/series.conf
+++ b/series.conf
@@ -55784,6 +55784,7 @@
 	patches.suse/drm-amdgpu-mes-add-front-end-for-detect-and-reset-hu.patch
 	patches.suse/drm-amdgpu-mes11-implement-detect-and-reset-callback.patch
 	patches.suse/drm-amdgpu-mes12-implement-detect-and-reset-callback.patch
+	patches.suse/drm-amdgpu-add-ip-offset-support-for-cyan-skillfish.patch
 	patches.suse/drm-amdkfd-Fix-error-code-sign-for-EINVAL-in-svm_ioc.patch
 	patches.suse/drm-msm-dpu-fix-incorrect-type-for-ret.patch
 	patches.suse/drm-amdgpu-Fix-allocating-extra-dwords-for-rings-v2.patch
