serial: sc16is7xx: remove useless enable of enhanced features (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55995,6 +55995,7 @@
 	patches.suse/drm-panic-Fix-drawing-the-logo-on-a-small-narrow-scr.patch
 	patches.suse/drm-panic-Fix-qr_code-ensure-vmargin-is-positive.patch
 	patches.suse/xhci-dbc-fix-bogus-1024-byte-prefix-if-ttyDBC-read-r.patch
+	patches.suse/serial-sc16is7xx-remove-useless-enable-of-enhanced-f.patch
 
 	########################################################
 	# end of sorted patches
