drm/panthor: Fix kernel panic on partial unmap of a GPU VA region (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55991,6 +55991,7 @@
 	patches.suse/drm-xe-guc-Check-GuC-running-state-before-deregister.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 	patches.suse/drm-amd-display-use-GFP_NOWAIT-for-allocation-in-int.patch
+	patches.suse/drm-panthor-Fix-kernel-panic-on-partial-unmap-of-a-G.patch
 
 	########################################################
 	# end of sorted patches
