xhci: dbc: fix bogus 1024 byte prefix if ttyDBC read races with stall event (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55994,6 +55994,7 @@
 	patches.suse/drm-panthor-Fix-kernel-panic-on-partial-unmap-of-a-G.patch
 	patches.suse/drm-panic-Fix-drawing-the-logo-on-a-small-narrow-scr.patch
 	patches.suse/drm-panic-Fix-qr_code-ensure-vmargin-is-positive.patch
+	patches.suse/xhci-dbc-fix-bogus-1024-byte-prefix-if-ttyDBC-read-r.patch
 
 	########################################################
 	# end of sorted patches
