--- a/series.conf
+++ b/series.conf
@@ -55993,6 +55993,7 @@
 	patches.suse/drm-amd-display-use-GFP_NOWAIT-for-allocation-in-int.patch
 	patches.suse/drm-panthor-Fix-kernel-panic-on-partial-unmap-of-a-G.patch
 	patches.suse/drm-panic-Fix-drawing-the-logo-on-a-small-narrow-scr.patch
+	patches.suse/drm-panic-Fix-qr_code-ensure-vmargin-is-positive.patch
 
 	########################################################
 	# end of sorted patches
