--- a/series.conf
+++ b/series.conf
@@ -55986,6 +55986,7 @@
 	patches.suse/drm-amdgpu-fix-handling-of-harvesting-for-ip_discove.patch
 	patches.suse/drm-amdgpu-fix-gfx12-mes-packet-status-return-check.patch
 	patches.suse/drm-panthor-Ensure-MCU-is-disabled-on-suspend.patch
+	patches.suse/accel-qaic-Fix-bootlog-initialization-ordering.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
 	########################################################
