drm/panic: Fix drawing the logo on a small narrow screen (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55992,6 +55992,7 @@
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 	patches.suse/drm-amd-display-use-GFP_NOWAIT-for-allocation-in-int.patch
 	patches.suse/drm-panthor-Fix-kernel-panic-on-partial-unmap-of-a-G.patch
+	patches.suse/drm-panic-Fix-drawing-the-logo-on-a-small-narrow-scr.patch
 
 	########################################################
 	# end of sorted patches
