--- a/series.conf
+++ b/series.conf
@@ -55988,6 +55988,7 @@
 	patches.suse/drm-panthor-Ensure-MCU-is-disabled-on-suspend.patch
 	patches.suse/accel-qaic-Fix-bootlog-initialization-ordering.patch
 	patches.suse/accel-qaic-Synchronize-access-to-DBC-request-queue-h.patch
+	patches.suse/drm-xe-guc-Check-GuC-running-state-before-deregister.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
 	########################################################
