--- a/series.conf
+++ b/series.conf
@@ -12649,6 +12649,7 @@
 	patches.suse/can-m_can-m_can_handle_state_errors-fix-CAN-state-tr.patch
 	patches.suse/can-m_can-m_can_chip_config-bring-up-interface-in-co.patch
 	patches.suse/drm-i915-guc-Skip-communication-warning-on-reset-in-.patch
+	patches.suse/drm-amdgpu-fix-handling-of-harvesting-for-ip_discove.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
 	# out-of-tree patches
