--- a/series.conf
+++ b/series.conf
@@ -12643,6 +12643,7 @@
 	patches.suse/ixgbevf-fix-mailbox-API-compatibility-by-negotiating.patch
 	patches.suse/ixgbe-handle-IXGBE_VF_FEATURES_NEGOTIATE-mbox-cmd.patch
 	patches.suse/ixgbe-fix-too-early-devlink_free-in-ixgbe_remove.patch
+	patches.suse/can-gs_usb-increase-max-interface-to-U8_MAX.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
 	# out-of-tree patches
