ASoC: nau8821: Cancel jdet_work before handling jack ejection (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12665,6 +12665,7 @@
 	patches.suse/ALSA-usb-audio-Fix-NULL-pointer-deference-in-try_to_.patch
 	patches.suse/ASoC-codecs-Fix-gain-setting-ranges-for-Renesas-IDT8.patch
 	patches.suse/ASoC-amd-sdw_utils-avoid-NULL-deref-when-devm_kaspri.patch
+	patches.suse/ASoC-nau8821-Cancel-jdet_work-before-handling-jack-e.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
 	# out-of-tree patches
