ASoC: nau8821: Add DMI quirk to bypass jack debounce circuit (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12667,6 +12667,7 @@
 	patches.suse/ASoC-amd-sdw_utils-avoid-NULL-deref-when-devm_kaspri.patch
 	patches.suse/ASoC-nau8821-Cancel-jdet_work-before-handling-jack-e.patch
 	patches.suse/ASoC-nau8821-Generalize-helper-to-clear-IRQ-status.patch
+	patches.suse/ASoC-nau8821-Add-DMI-quirk-to-bypass-jack-debounce-c.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
 	# out-of-tree patches
