--- a/series.conf
+++ b/series.conf
@@ -12650,6 +12650,7 @@
 	patches.suse/can-m_can-m_can_chip_config-bring-up-interface-in-co.patch
 	patches.suse/drm-i915-guc-Skip-communication-warning-on-reset-in-.patch
 	patches.suse/drm-amdgpu-fix-handling-of-harvesting-for-ip_discove.patch
+	patches.suse/drm-amdgpu-use-atomic-functions-with-memory-barriers.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
 	# out-of-tree patches
