--- a/series.conf
+++ b/series.conf
@@ -12660,6 +12660,7 @@
 	patches.suse/accel-qaic-Treat-remaining-0-as-error-in-find_and_ma.patch
 	patches.suse/accel-qaic-Synchronize-access-to-DBC-request-queue-h.patch
 	patches.suse/drm-sched-Fix-potential-double-free-in-drm_sched_job.patch
+	patches.suse/drm-xe-guc-Check-GuC-running-state-before-deregister.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
 	# out-of-tree patches
