--- a/series.conf
+++ b/series.conf
@@ -12672,6 +12672,7 @@
 	patches.suse/can-bxcan-bxcan_start_xmit-use-can_dev_dropped_skb-i.patch
 	patches.suse/can-esd-acc_start_xmit-use-can_dev_dropped_skb-inste.patch
 	patches.suse/can-rockchip-canfd-rkcanfd_start_xmit-use-can_dev_dr.patch
+	patches.suse/can-netlink-can_changelink-allow-disabling-of-automa.patch
 
 	# out-of-tree patches
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
