--- a/series.conf
+++ b/series.conf
@@ -12608,6 +12608,7 @@
 	patches.suse/fbdev-Fix-logic-error-in-offb-name-match.patch
 	patches.suse/ASoC-SOF-ipc3-topology-Fix-multi-core-and-static-pip.patch
 	patches.suse/ASoC-SOF-ipc4-pcm-fix-delay-calculation-when-DSP-res.patch
+	patches.suse/ASoC-SOF-ipc4-pcm-fix-start-offset-calculation-for-c.patch
 	patches.suse/ASoC-SOF-ipc4-topology-Correct-the-minimum-host-DMA-.patch
 	patches.suse/ASoC-SOF-ipc4-topology-Account-for-different-ChainDM.patch
 	patches.suse/ASoC-SOF-Intel-hda-pcm-Place-the-constraint-on-perio.patch
