--- a/series.conf
+++ b/series.conf
@@ -12327,6 +12327,7 @@
 	patches.suse/ACPI-processor-idle-Fix-memory-leak-when-register-cp.patch
 	patches.suse/ACPI-property-Fix-buffer-properties-extraction-for-s.patch
 	patches.suse/ACPI-property-Disregard-references-in-data-only-subn.patch
+	patches.suse/ACPI-property-Add-code-comments-explaining-what-is-g.patch
 	patches.suse/ACPI-TAD-Add-missing-sysfs_remove_group-for-ACPI_TAD.patch
 	patches.suse/thermal-drivers-qcom-lmh-Add-missing-IRQ-includes.patch
 	patches.suse/arm64-dts-imx93-kontron-Fix-GPIO-for-panel-regulator.patch
