can: esd: acc_start_xmit(): use can_dev_dropped_skb() instead of can_dropped_invalid_skb() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12670,6 +12670,7 @@
 	patches.suse/ASoC-nau8821-Add-DMI-quirk-to-bypass-jack-debounce-c.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 	patches.suse/can-bxcan-bxcan_start_xmit-use-can_dev_dropped_skb-i.patch
+	patches.suse/can-esd-acc_start_xmit-use-can_dev_dropped_skb-inste.patch
 
 	# out-of-tree patches
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
