can: gs_usb: gs_make_candev(): populate net_device->dev_port (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12644,6 +12644,7 @@
 	patches.suse/ixgbe-handle-IXGBE_VF_FEATURES_NEGOTIATE-mbox-cmd.patch
 	patches.suse/ixgbe-fix-too-early-devlink_free-in-ixgbe_remove.patch
 	patches.suse/can-gs_usb-increase-max-interface-to-U8_MAX.patch
+	patches.suse/can-gs_usb-gs_make_candev-populate-net_device-dev_po.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
 	# out-of-tree patches
