--- a/series.conf
+++ b/series.conf
@@ -12645,6 +12645,7 @@
 	patches.suse/ixgbe-fix-too-early-devlink_free-in-ixgbe_remove.patch
 	patches.suse/can-gs_usb-increase-max-interface-to-U8_MAX.patch
 	patches.suse/can-gs_usb-gs_make_candev-populate-net_device-dev_po.patch
+	patches.suse/can-m_can-m_can_plat_remove-add-missing-pm_runtime_d.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
 	# out-of-tree patches
