drm/amd/display: use GFP_NOWAIT for allocation in interrupt handler (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12673,6 +12673,7 @@
 	patches.suse/can-esd-acc_start_xmit-use-can_dev_dropped_skb-inste.patch
 	patches.suse/can-rockchip-canfd-rkcanfd_start_xmit-use-can_dev_dr.patch
 	patches.suse/can-netlink-can_changelink-allow-disabling-of-automa.patch
+	patches.suse/drm-amd-display-use-GFP_NOWAIT-for-allocation-in-int.patch
 
 	# out-of-tree patches
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
