drm/sched: Fix potential double free in drm_sched_job_add_resv_dependencies (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12659,6 +12659,7 @@
 	patches.suse/accel-qaic-Fix-bootlog-initialization-ordering.patch
 	patches.suse/accel-qaic-Treat-remaining-0-as-error-in-find_and_ma.patch
 	patches.suse/accel-qaic-Synchronize-access-to-DBC-request-queue-h.patch
+	patches.suse/drm-sched-Fix-potential-double-free-in-drm_sched_job.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
 	# out-of-tree patches
