--- a/series.conf
+++ b/series.conf
@@ -12666,6 +12666,7 @@
 	patches.suse/ASoC-codecs-Fix-gain-setting-ranges-for-Renesas-IDT8.patch
 	patches.suse/ASoC-amd-sdw_utils-avoid-NULL-deref-when-devm_kaspri.patch
 	patches.suse/ASoC-nau8821-Cancel-jdet_work-before-handling-jack-e.patch
+	patches.suse/ASoC-nau8821-Generalize-helper-to-clear-IRQ-status.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
 	# out-of-tree patches
