drm/bridge: lt9211: Drop check for last nibble of version register (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12654,6 +12654,7 @@
 	patches.suse/drm-amd-powerplay-Fix-CIK-shutdown-temperature.patch
 	patches.suse/drm-amdgpu-fix-gfx12-mes-packet-status-return-check.patch
 	patches.suse/drm-panthor-Ensure-MCU-is-disabled-on-suspend.patch
+	patches.suse/drm-bridge-lt9211-Drop-check-for-last-nibble-of-vers.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
 	# out-of-tree patches
