--- a/series.conf
+++ b/series.conf
@@ -12656,6 +12656,7 @@
 	patches.suse/drm-panthor-Ensure-MCU-is-disabled-on-suspend.patch
 	patches.suse/drm-bridge-lt9211-Drop-check-for-last-nibble-of-vers.patch
 	patches.suse/drm-rockchip-vop2-use-correct-destination-rectangle-.patch
+	patches.suse/accel-qaic-Fix-bootlog-initialization-ordering.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
 	# out-of-tree patches
