--- a/series.conf
+++ b/series.conf
@@ -12578,6 +12578,7 @@
 	patches.suse/clk-mediatek-mt8195-infra_ao-Fix-parent-for-infra_ao.patch
 	patches.suse/clk-mediatek-clk-mux-Do-not-pass-flags-to-clk_mux_de.patch
 	patches.suse/clk-at91-peripheral-fix-return-value.patch
+	patches.suse/clk-nxp-lpc18xx-cgu-convert-from-round_rate-to-deter.patch
 	patches.suse/cpufreq-Make-drivers-using-CPUFREQ_ETERNAL-specify-transition-latency.patch
 	patches.suse/cpufreq-CPPC-Avoid-using-CPUFREQ_ETERNAL-as-transition-delay.patch
 	patches.suse/cpufreq-mediatek-fix-device-leak-on-probe-failure.patch
