--- a/series.conf
+++ b/series.conf
@@ -12652,6 +12652,7 @@
 	patches.suse/drm-amdgpu-fix-handling-of-harvesting-for-ip_discove.patch
 	patches.suse/drm-amdgpu-use-atomic-functions-with-memory-barriers.patch
 	patches.suse/drm-amd-powerplay-Fix-CIK-shutdown-temperature.patch
+	patches.suse/drm-amdgpu-fix-gfx12-mes-packet-status-return-check.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
 	# out-of-tree patches
