--- a/series.conf
+++ b/series.conf
@@ -12662,6 +12662,7 @@
 	patches.suse/drm-sched-Fix-potential-double-free-in-drm_sched_job.patch
 	patches.suse/drm-xe-guc-Check-GuC-running-state-before-deregister.patch
 	patches.suse/ALSA-firewire-amdtp-stream-fix-enum-kernel-doc-warni.patch
+	patches.suse/ALSA-usb-audio-Fix-NULL-pointer-deference-in-try_to_.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
 	# out-of-tree patches
