clk: nxp: Fix pll0 rate check condition in LPC18xx CGU driver (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12579,6 +12579,7 @@
 	patches.suse/clk-mediatek-clk-mux-Do-not-pass-flags-to-clk_mux_de.patch
 	patches.suse/clk-at91-peripheral-fix-return-value.patch
 	patches.suse/clk-nxp-lpc18xx-cgu-convert-from-round_rate-to-deter.patch
+	patches.suse/clk-nxp-Fix-pll0-rate-check-condition-in-LPC18xx-CGU.patch
 	patches.suse/cpufreq-Make-drivers-using-CPUFREQ_ETERNAL-specify-transition-latency.patch
 	patches.suse/cpufreq-CPPC-Avoid-using-CPUFREQ_ETERNAL-as-transition-delay.patch
 	patches.suse/cpufreq-mediatek-fix-device-leak-on-probe-failure.patch
