--- a/series.conf
+++ b/series.conf
@@ -12669,6 +12669,7 @@
 	patches.suse/ASoC-nau8821-Generalize-helper-to-clear-IRQ-status.patch
 	patches.suse/ASoC-nau8821-Add-DMI-quirk-to-bypass-jack-debounce-c.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
+	patches.suse/can-bxcan-bxcan_start_xmit-use-can_dev_dropped_skb-i.patch
 
 	# out-of-tree patches
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
