drm/amd/powerplay: Fix CIK shutdown temperature (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12651,6 +12651,7 @@
 	patches.suse/drm-i915-guc-Skip-communication-warning-on-reset-in-.patch
 	patches.suse/drm-amdgpu-fix-handling-of-harvesting-for-ip_discove.patch
 	patches.suse/drm-amdgpu-use-atomic-functions-with-memory-barriers.patch
+	patches.suse/drm-amd-powerplay-Fix-CIK-shutdown-temperature.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
 	# out-of-tree patches
