--- a/series.conf
+++ b/series.conf
@@ -12322,6 +12322,7 @@
 	patches.suse/drm-amd-Fix-hybrid-sleep.patch
 	patches.suse/PM-hibernate-Fix-pm_hibernation_mode_is_suspend-buil.patch
 	patches.suse/ACPI-debug-fix-signedness-issues-in-read-write-helpe.patch
+	patches.suse/ACPICA-Allow-to-skip-Global-Lock-initialization.patch
 	patches.suse/ACPICA-Fix-largest-possible-resource-descriptor-inde.patch
 	patches.suse/ACPI-processor-idle-Fix-memory-leak-when-register-cp.patch
 	patches.suse/ACPI-property-Fix-buffer-properties-extraction-for-s.patch
