ALSA: firewire: amdtp-stream: fix enum kernel-doc warnings (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12661,6 +12661,7 @@
 	patches.suse/accel-qaic-Synchronize-access-to-DBC-request-queue-h.patch
 	patches.suse/drm-sched-Fix-potential-double-free-in-drm_sched_job.patch
 	patches.suse/drm-xe-guc-Check-GuC-running-state-before-deregister.patch
+	patches.suse/ALSA-firewire-amdtp-stream-fix-enum-kernel-doc-warni.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
 	# out-of-tree patches
