--- a/series.conf
+++ b/series.conf
@@ -12658,6 +12658,7 @@
 	patches.suse/drm-rockchip-vop2-use-correct-destination-rectangle-.patch
 	patches.suse/accel-qaic-Fix-bootlog-initialization-ordering.patch
 	patches.suse/accel-qaic-Treat-remaining-0-as-error-in-find_and_ma.patch
+	patches.suse/accel-qaic-Synchronize-access-to-DBC-request-queue-h.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
 	# out-of-tree patches
