--- a/series.conf
+++ b/series.conf
@@ -12663,6 +12663,7 @@
 	patches.suse/drm-xe-guc-Check-GuC-running-state-before-deregister.patch
 	patches.suse/ALSA-firewire-amdtp-stream-fix-enum-kernel-doc-warni.patch
 	patches.suse/ALSA-usb-audio-Fix-NULL-pointer-deference-in-try_to_.patch
+	patches.suse/ASoC-codecs-Fix-gain-setting-ranges-for-Renesas-IDT8.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
 	# out-of-tree patches
