drm/exynos: exynos7_drm_decon: properly clear channels during bind (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -1358,6 +1358,7 @@
 	patches.suse/drm-xe-xe_guc_ads-save-restore-OA-registers-and-allo.patch
 	patches.suse/Revert-drm-xe-xe_guc_ads-save-restore-OA-registers-a.patch
 	patches.suse/drm-exynos-exynos7_drm_decon-fix-uninitialized-crtc-.patch
+	patches.suse/drm-exynos-exynos7_drm_decon-properly-clear-channels.patch
 	patches.suse/drm-mediatek-Fix-child-node-refcount-handling-in-ear.patch
 	patches.suse/drm-xe-hdcp-Fix-gsc-structure-check-in-fw-check-stat.patch
 	patches.suse/drm-i915-dsi-convert-to-struct-intel_display.patch
