--- a/series.conf
+++ b/series.conf
@@ -12655,6 +12655,7 @@
 	patches.suse/drm-amdgpu-fix-gfx12-mes-packet-status-return-check.patch
 	patches.suse/drm-panthor-Ensure-MCU-is-disabled-on-suspend.patch
 	patches.suse/drm-bridge-lt9211-Drop-check-for-last-nibble-of-vers.patch
+	patches.suse/drm-rockchip-vop2-use-correct-destination-rectangle-.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
 	# out-of-tree patches
