--- a/series.conf
+++ b/series.conf
@@ -12647,6 +12647,7 @@
 	patches.suse/can-gs_usb-gs_make_candev-populate-net_device-dev_po.patch
 	patches.suse/can-m_can-m_can_plat_remove-add-missing-pm_runtime_d.patch
 	patches.suse/can-m_can-m_can_handle_state_errors-fix-CAN-state-tr.patch
+	patches.suse/can-m_can-m_can_chip_config-bring-up-interface-in-co.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
 	# out-of-tree patches
