--- a/series.conf
+++ b/series.conf
@@ -11034,6 +11034,7 @@
 	patches.suse/ASoC-ops-dynamically-allocate-struct-snd_ctl_elem_va.patch
 	patches.suse/ASoC-mediatek-use-reserved-memory-or-enable-buffer-p.patch
 	patches.suse/ASoC-SOF-topology-Parse-the-dapm_widget_tokens-in-ca.patch
+	patches.suse/ASoC-SOF-ipc4-pcm-Enable-delay-reporting-for-ChainDM.patch
 	patches.suse/ASoC-core-Check-for-rtd-NULL-in-snd_soc_remove_pcm_r.patch
 	patches.suse/ASoC-hdac_hdmi-Rate-limit-logging-on-connection-and-.patch
 	patches.suse/ASoC-soc-dapm-set-bias_level-if-snd_soc_dapm_set_bia.patch
