--- a/series.conf
+++ b/series.conf
@@ -12675,6 +12675,7 @@
 	patches.suse/can-esd-acc_start_xmit-use-can_dev_dropped_skb-inste.patch
 	patches.suse/can-rockchip-canfd-rkcanfd_start_xmit-use-can_dev_dr.patch
 	patches.suse/can-netlink-can_changelink-allow-disabling-of-automa.patch
+	patches.suse/gpio-104-idio-16-Define-maximum-valid-register-addre.patch
 	patches.suse/drm-amd-display-use-GFP_NOWAIT-for-allocation-in-int.patch
 	patches.suse/drm-panthor-Fix-kernel-panic-on-partial-unmap-of-a-G.patch
 	patches.suse/drm-panic-Fix-drawing-the-logo-on-a-small-narrow-scr.patch
