--- a/series.conf
+++ b/series.conf
@@ -12670,6 +12670,7 @@
 	patches.suse/ASoC-nau8821-Add-DMI-quirk-to-bypass-jack-debounce-c.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 	patches.suse/HID-hid-input-only-ignore-0-battery-events-for-digit.patch
+	patches.suse/HID-multitouch-fix-name-of-Stylus-input-devices.patch
 	patches.suse/can-bxcan-bxcan_start_xmit-use-can_dev_dropped_skb-i.patch
 	patches.suse/can-esd-acc_start_xmit-use-can_dev_dropped_skb-inste.patch
 	patches.suse/can-rockchip-canfd-rkcanfd_start_xmit-use-can_dev_dr.patch
