firmware: arm_scmi: Account for failed debug initialization (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12679,6 +12679,7 @@
 	patches.suse/gpio-pci-idio-16-Define-maximum-valid-register-addre.patch
 	patches.suse/gpio-ljca-Fix-duplicated-IRQ-mapping.patch
 	patches.suse/hwmon-sht3x-Fix-error-handling.patch
+	patches.suse/firmware-arm_scmi-Account-for-failed-debug-initializ.patch
 	patches.suse/drm-amd-display-use-GFP_NOWAIT-for-allocation-in-int.patch
 	patches.suse/drm-panthor-Fix-kernel-panic-on-partial-unmap-of-a-G.patch
 	patches.suse/drm-panic-Fix-drawing-the-logo-on-a-small-narrow-scr.patch
