--- a/series.conf
+++ b/series.conf
@@ -12678,6 +12678,7 @@
 	patches.suse/gpio-104-idio-16-Define-maximum-valid-register-addre.patch
 	patches.suse/gpio-pci-idio-16-Define-maximum-valid-register-addre.patch
 	patches.suse/gpio-ljca-Fix-duplicated-IRQ-mapping.patch
+	patches.suse/hwmon-sht3x-Fix-error-handling.patch
 	patches.suse/drm-amd-display-use-GFP_NOWAIT-for-allocation-in-int.patch
 	patches.suse/drm-panthor-Fix-kernel-panic-on-partial-unmap-of-a-G.patch
 	patches.suse/drm-panic-Fix-drawing-the-logo-on-a-small-narrow-scr.patch
