--- a/series.conf
+++ b/series.conf
@@ -12527,6 +12527,7 @@
 	patches.suse/KEYS-trusted_tpm1-Compare-HMAC-values-in-constant-ti.patch
 	patches.suse/HID-hidraw-tighten-ioctl-command-parsing.patch
 	patches.suse/HID-intel-ish-ipc-Remove-redundant-ready-check-after.patch
+	patches.suse/mtd-rawnand-fsmc-Default-to-autodetect-buswidth.patch
 	patches.suse/mtd-rawnand-atmel-Fix-error-handling-path-in-atmel_n.patch
 	patches.suse/mtd-rawnand-omap2-fix-device-leak-on-probe-failure.patch
 	patches.suse/serial-max310x-Add-error-checking-in-probe.patch
