--- a/series.conf
+++ b/series.conf
@@ -12433,6 +12433,7 @@
 	patches.suse/dpll-zl3073x-Add-firmware-loading-functionality.patch
 	patches.suse/dpll-zl3073x-Refactor-DPLL-initialization.patch
 	patches.suse/dpll-zl3073x-Implement-devlink-flash-callback.patch
+	patches.suse/wifi-mt76-mt7925u-Add-VID-PID-for-Netgear-A9000.patch
 	patches.suse/wifi-mt76-fix-potential-memory-leak-in-mt76_wmac_pro.patch
 	patches.suse/wifi-mt76-mt7996-Fix-RX-packets-configuration-for-pr.patch
 	patches.suse/wifi-mt76-mt7996-Convert-mt7996_wed_rro_addr-to-LE.patch
