--- a/series.conf
+++ b/series.conf
@@ -12655,6 +12655,7 @@
 	patches.suse/rtc-x1205-Fix-Xicor-X1205-vendor-prefix.patch
 	patches.suse/rtc-optee-fix-memory-leak-on-driver-removal.patch
 	patches.suse/rtc-interface-Fix-long-standing-race-when-setting-al.patch
+	patches.suse/rtc-interface-Ensure-alarm-irq-is-enabled-when-UIE-i.patch
 	patches.suse/NFSD-Define-a-proc_layoutcommit-for-the-FlexFiles-layout-type.patch
 	patches.suse/dpll-zl3073x-Increase-maximum-size-of-flash-utility.patch
 	patches.suse/dpll-zl3073x-Handle-missing-or-corrupted-flash-confi.patch
