--- a/series.conf
+++ b/series.conf
@@ -12720,6 +12720,7 @@
 	patches.suse/serial-8250_dw-handle-reset-control-deassert-error.patch
 	patches.suse/serial-8250_mtk-Enable-baud-clock-and-manage-in-runt.patch
 	patches.suse/misc-fastrpc-Fix-dma_buf-object-leak-in-fastrpc_map_.patch
+	patches.suse/most-usb-Fix-use-after-free-in-hdm_disconnect.patch
 
 	# out-of-tree patches
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
