--- a/series.conf
+++ b/series.conf
@@ -12416,6 +12416,7 @@
 	patches.suse/media-pci-mg4b-fix-uninitialized-iio-scan-data.patch
 	patches.suse/media-cec-extron-da-hd-4k-plus-drop-external-module-.patch
 	patches.suse/media-s5p-mfc-remove-an-unused-uninitialized-variabl.patch
+	patches.suse/media-nxp-imx8-isi-Drop-unused-argument-to-mxc_isi_c.patch
 	patches.suse/media-venus-firmware-Use-correct-reset-sequence-for-.patch
 	patches.suse/media-i2c-mt9v111-fix-incorrect-type-for-ret.patch
 	patches.suse/media-rc-fix-races-with-imon_disconnect.patch
