--- a/series.conf
+++ b/series.conf
@@ -12303,6 +12303,7 @@
 	patches.suse/spi-cadence-quadspi-Fix-cqspi_setup_flash.patch
 	patches.suse/spi-fix-return-code-when-spi-device-has-too-many-chi.patch
 	patches.suse/mmc-core-SPI-mode-remove-cmd7.patch
+	patches.suse/mmc-mmc_spi-multiple-block-read-remove-read-crc-ack.patch
 	patches.suse/mmc-core-Fix-variable-shadowing-in-mmc_route_rpmb_fr.patch
 	patches.suse/mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
 	patches.suse/leds-flash-leds-qcom-flash-Update-torch-current-clam.patch
