--- a/series.conf
+++ b/series.conf
@@ -12305,6 +12305,7 @@
 	patches.suse/mmc-core-SPI-mode-remove-cmd7.patch
 	patches.suse/mmc-mmc_spi-multiple-block-read-remove-read-crc-ack.patch
 	patches.suse/mmc-core-Fix-variable-shadowing-in-mmc_route_rpmb_fr.patch
+	patches.suse/mfd-intel_soc_pmic_chtdc_ti-Set-use_single_read-regm.patch
 	patches.suse/mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
 	patches.suse/leds-flash-leds-qcom-flash-Update-torch-current-clam.patch
 	patches.suse/leds-leds-lp55xx-Use-correct-address-for-memory-prog.patch
