--- a/series.conf
+++ b/series.conf
@@ -12717,6 +12717,7 @@
 	patches.suse/xhci-dbc-fix-bogus-1024-byte-prefix-if-ttyDBC-read-r.patch
 	patches.suse/xhci-dbc-enable-back-DbC-in-resume-if-it-was-enabled.patch
 	patches.suse/serial-sc16is7xx-remove-useless-enable-of-enhanced-f.patch
+	patches.suse/serial-8250_dw-handle-reset-control-deassert-error.patch
 
 	# out-of-tree patches
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
