--- a/series.conf
+++ b/series.conf
@@ -12718,6 +12718,7 @@
 	patches.suse/xhci-dbc-enable-back-DbC-in-resume-if-it-was-enabled.patch
 	patches.suse/serial-sc16is7xx-remove-useless-enable-of-enhanced-f.patch
 	patches.suse/serial-8250_dw-handle-reset-control-deassert-error.patch
+	patches.suse/serial-8250_mtk-Enable-baud-clock-and-manage-in-runt.patch
 
 	# out-of-tree patches
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
