net: usb: lan78xx: Add error handling to lan78xx_init_mac_address (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -4243,6 +4243,7 @@
 	patches.suse/net-stmmac-Fix-clock-rate-variables-size.patch
 	patches.suse/net-phy-Add-helper-for-mapping-RGMII-link-speed-to-clock-rate.patch
 	patches.suse/net-dwmac-imx-Use-helper-rgmii_clock.patch
+	patches.suse/net-usb-lan78xx-Add-error-handling-to-lan78xx_init_m.patch
 	patches.suse/gve-Remove-unused-gve_adminq_set_mtu.patch
 	patches.suse/cn10k-ipsec-Fix-compilation-error-when-CONFIG_XFRM_O.patch
 	patches.suse/lib-packing-create-__pack-and-__unpack-variants-with.patch
