--- a/series.conf
+++ b/series.conf
@@ -4571,6 +4571,7 @@
 	patches.suse/spi-atmel-qspi-Memory-barriers-after-memory-mapped-I.patch
 	patches.suse/HID-hid-sensor-hub-don-t-use-stale-platform-data-on-.patch
 	patches.suse/mfd-lpc_ich-Add-another-Gemini-Lake-ISA-bridge-PCI-d.patch
+	patches.suse/mfd-intel_soc_pmic_chtdc_ti-Fix-invalid-regmap-confi.patch
 	patches.suse/mfd-syscon-Fix-race-in-device_node_get_regmap.patch
 	patches.suse/leds-lp8860-Write-full-EEPROM-not-only-half-of-it.patch
 	patches.suse/leds-netxbig-Fix-an-OF-node-reference-leak-in-netxbi.patch
