--- a/series.conf
+++ b/series.conf
@@ -9373,6 +9373,7 @@
 	patches.suse/spi-tegra210-quad-Fix-X1_X2_X4-encoding-and-support-.patch
 	patches.suse/spi-tegra210-quad-remove-redundant-error-handling-co.patch
 	patches.suse/spi-tegra210-quad-modify-chip-select-CS-deactivation.patch
+	patches.suse/PM-runtime-Add-new-devm-functions.patch
 	patches.suse/spi-sh-msiof-Fix-maximum-DMA-transfer-size.patch
 	patches.suse/power-supply-collie-Fix-wakeup-source-leaks-on-devic.patch
 	patches.suse/power-reset-at91-reset-Optimize-at91_reset.patch
