--- a/series.conf
+++ b/series.conf
@@ -12704,6 +12704,7 @@
 	patches.suse/gpio-pci-idio-16-Define-maximum-valid-register-addre.patch
 	patches.suse/gpio-ljca-Fix-duplicated-IRQ-mapping.patch
 	patches.suse/spi-spi-nxp-fspi-add-extra-delay-after-dll-locked.patch
+	patches.suse/spi-airoha-return-an-error-for-continuous-mode-dirma.patch
 	patches.suse/hwmon-sht3x-Fix-error-handling.patch
 	patches.suse/firmware-arm_scmi-Account-for-failed-debug-initializ.patch
 	patches.suse/firmware-arm_scmi-Fix-premature-SCMI_XFER_FLAG_IS_RA.patch
