net: usb: lan78xx: fix use of improperly initialized dev->chipid in lan78xx_reset (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12671,6 +12671,7 @@
 	patches.suse/can-m_can-m_can_plat_remove-add-missing-pm_runtime_d.patch
 	patches.suse/can-m_can-m_can_handle_state_errors-fix-CAN-state-tr.patch
 	patches.suse/can-m_can-m_can_chip_config-bring-up-interface-in-co.patch
+	patches.suse/net-usb-lan78xx-fix-use-of-improperly-initialized-de.patch
 	patches.suse/drm-i915-guc-Skip-communication-warning-on-reset-in-.patch
 	patches.suse/drm-amdgpu-fix-handling-of-harvesting-for-ip_discove.patch
 	patches.suse/drm-amdgpu-use-atomic-functions-with-memory-barriers.patch
