PCI: endpoint: Remove surplus return statement from pci_epf_test_clean_dma_chan() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -2253,6 +2253,7 @@
 	patches.suse/PCI-TPH-Add-Steering-Tag-support.patch
 	patches.suse/PCI-TPH-Add-TPH-documentation.patch
 	patches.suse/PCI-Add-ACS-quirk-for-Wangxun-FF5xxx-NICs.patch
+	patches.suse/PCI-endpoint-Remove-surplus-return-statement-from-pc.patch
 	patches.suse/PCI-endpoint-epf-mhi-Avoid-NULL-dereference-if-DT-la.patch
 	patches.suse/PCI-endpoint-Fix-PCI-domain-ID-release-in-pci_epc_de.patch
 	patches.suse/PCI-endpoint-Clear-secondary-not-primary-EPC-in-pci_.patch
