xhci: dbc: enable back DbC in resume if it was enabled before suspend (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12715,6 +12715,7 @@
 	patches.suse/drm-panic-Fix-drawing-the-logo-on-a-small-narrow-scr.patch
 	patches.suse/drm-panic-Fix-qr_code-ensure-vmargin-is-positive.patch
 	patches.suse/xhci-dbc-fix-bogus-1024-byte-prefix-if-ttyDBC-read-r.patch
+	patches.suse/xhci-dbc-enable-back-DbC-in-resume-if-it-was-enabled.patch
 
 	# out-of-tree patches
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
