ACPI: platform-profile: Fix CFI violation when accessing sysfs files (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -6905,6 +6905,7 @@
 	patches.suse/msft-hv-3228-x86-hyperv-fix-an-indentation-issue-in-mshyperv.h.patch
 	patches.suse/PNP-Expand-length-of-fixup-id-string.patch
 	patches.suse/ACPI-thermal-Fix-stale-comment-regarding-trip-points.patch
+	patches.suse/ACPI-platform-profile-Fix-CFI-violation-when-accessing-sysfs-files.patch
 	patches.suse/ACPI-HED-Always-initialize-before-evged.patch
 	patches.suse/pm-cpupower-bench-Prevent-NULL-dereference-on-malloc.patch
 	patches.suse/cpufreq-amd-pstate-Modify-the-min_perf-calculation-in-adjust_perf-callback.patch
