cpufreq/amd-pstate: Fix a regression leading to EPP 0 after hibernate (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12631,6 +12631,7 @@
 	patches.suse/ixgbe-handle-IXGBE_VF_FEATURES_NEGOTIATE-mbox-cmd.patch
 	patches.suse/ixgbe-fix-too-early-devlink_free-in-ixgbe_remove.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
+	patches.suse/cpufreq-amd-pstate-Fix-a-regression-leading-to-EPP-0-after-hibernate.patch
 
 	# out-of-tree patches
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
