cpufreq/amd-pstate: Avoid shadowing ret in amd_pstate_ut_check_driver() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9396,6 +9396,7 @@
 	patches.suse/cpufreq-amd-pstate-Add-offline-online-and-suspend-callbacks-for-amd_pstate_driver.patch
 	patches.suse/cpufreq-amd-pstate-Add-support-for-the-Requested-CPU-Min-frequency-BIOS-option.patch
 	patches.suse/amd-pstate-ut-Reset-amd-pstate-driver-mode-after-running-selftests.patch
+	patches.suse/cpufreq-amd-pstate-Avoid-shadowing-ret-in-amd_pstate_ut_check_driver.patch
 	patches.suse/PM-runtime-fix-denying-of-auto-suspend-in-pm_suspend.patch
 	patches.suse/PM-wakeup-Delete-space-in-the-end-of-string-shown-by.patch
 	patches.suse/PM-sleep-Print-PM-debug-messages-during-hibernation.patch
