KVM: TDX: Move TDX hardware setup from main.c to tdx.c (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11360,6 +11360,7 @@
 	patches.suse/KVM-x86-Convert-vcpu_run-s-immediate-exit-param-into.patch
 	patches.suse/KVM-SVM-Disable-interception-of-SPEC_CTRL-iff-the-MS.patch
 	patches.suse/KVM-x86-Drop-pending_smi-vs.-INIT_RECEIVED-check-whe.patch
+	patches.suse/KVM-TDX-Move-TDX-hardware-setup-from-main.c-to-tdx.c.patch
 	patches.suse/drm-rockchip-cleanup-fb-when-drm_gem_fb_afbc_init-fa.patch
 	patches.suse/drm-connector-hdmi-Evaluate-limited-range-after-comp.patch
 	patches.suse/drm-panfrost-Fix-panfrost-device-variable-name-in-de.patch
