x86/tdx: Tidy reset_pamt functions (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12490,6 +12490,7 @@
 	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.4.0.11.patch
 	patches.suse/scsi-lpfc-Copyright-updates-for-14.4.0.11-patches.patch
 	patches.suse/x86-tdx-Eliminate-duplicate-code-in-tdx_clear_page.patch
+	patches.suse/x86-tdx-Tidy-reset_pamt-functions.patch
 	patches.suse/x86-virt-tdx-Mark-memory-cache-state-incoherent-when-makin.patch
 	patches.suse/crypto-keembay-Add-missing-check-after-sg_nents_for_.patch
 	patches.suse/hwrng-nomadik-add-ARM_AMBA-dependency.patch
