locking/mutex: Introduce devm_mutex_init() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -25560,6 +25560,7 @@
 	patches.suse/perf-daemon-Fix-file-leak-in-daemon_session__control.patch
 	patches.suse/perf-stat-Don-t-display-metric-header-for-non-leader-uncore-events.patch
 	patches.suse/perf-pmu-Count-sys-and-cpuid-JSON-events-separately.patch
+	patches.suse/locking-mutex-Introduce-devm_mutex_init.patch
 	patches.suse/leds-pwm-Disable-PWM-when-going-to-suspend.patch
 	patches.suse/usb-gadget-uvc-fix-try-format-returns-on-uncompresse.patch
 	patches.suse/usb-gadget-uvc-configfs-ensure-guid-to-be-valid-befo.patch
