locking/mutex: Mark devm_mutex_init() as __must_check (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33831,6 +33831,7 @@
 	patches.suse/Docs-ABI-Fix-sysfs-kernel-address_bits-path.patch
 	patches.suse/selftests-tracing-Fix-false-failure-of-subsystem-eve.patch
 	patches.suse/selftests-Fix-errno-checking-in-syscall_user_dispatc.patch
+	patches.suse/locking-mutex-Mark-devm_mutex_init-as-__must_check.patch
 	patches.suse/x86-fpu-Delay-instruction-pointer-fixup-until-after-warnin.patch
 	patches.suse/s390-stp-Remove-udelay-from-stp_sync_clock.patch
 	patches.suse/s390-time-Use-monotonic-clock-in-get_cycles.patch
