ACPI: battery: Check for error code from devm_mutex_init() call (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -29387,6 +29387,7 @@
 	patches.suse/ACPI-CPPC-Fix-_CPC-register-setting-issue.patch
 	patches.suse/ACPI-battery-allocate-driver-data-through-devm_-APIs.patch
 	patches.suse/ACPI-battery-initialize-mutexes-through-devm_-APIs.patch
+	patches.suse/ACPI-battery-Check-for-error-code-from-devm_mutex_in.patch
 	patches.suse/hwmon-nct6775-Add-665-ACE-600M-CL-to-ASUS-WMI-monito.patch
 	patches.suse/hwmon-pmbus-core-clear-faults-after-setting-smbalert.patch
 	patches.suse/hwmon-nct6775-core-Fix-overflows-seen-when-writing-l.patch
