ACPI: battery: Add synchronization between interface updates (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34757,6 +34757,7 @@
 	patches.suse/clk-mediatek-clk-mux-Do-not-pass-flags-to-clk_mux_de.patch
 	patches.suse/clk-at91-peripheral-fix-return-value.patch
 	patches.suse/cpufreq-tegra186-Set-target-frequency-for-all-cpus-in-policy.patch
+	patches.suse/ACPI-battery-Add-synchronization-between-interface-u.patch
 	patches.suse/staging-axis-fifo-fix-maximum-TX-packet-length-check.patch
 	patches.suse/staging-axis-fifo-fix-TX-handling-on-copy_from_user-.patch
 	patches.suse/staging-axis-fifo-flush-RX-FIFO-on-read-errors.patch
