nvme-pci: Add TUXEDO IBS Gen8 to Samsung sleep quirk (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34597,6 +34597,7 @@
 	patches.suse/nvmet-fc-avoid-scheduling-association-deletion-twice.patch
 	patches.suse/nvmet-fcloop-call-done-callback-even-when-remote-por.patch
 	patches.suse/nvme-fc-use-lock-accessing-port_state-and-rport-stat.patch
+	patches.suse/nvme-pci-Add-TUXEDO-IBS-Gen8-to-Samsung-sleep-quirk.patch
 	patches.suse/ALSA-lx_core-use-int-type-to-store-negative-error-co.patch
 	patches.suse/ASoC-imx-hdmi-remove-cpu_pdev-related-code.patch
 	patches.suse/ASoC-qcom-audioreach-fix-potential-null-pointer-dere.patch
