nvme-auth: update sc_c in host response (git-fixes bsc#1249397).

--- a/series.conf
+++ b/series.conf
@@ -12631,6 +12631,7 @@
 	patches.suse/ixgbe-handle-IXGBE_VF_FEATURES_NEGOTIATE-mbox-cmd.patch
 	patches.suse/ixgbe-fix-too-early-devlink_free-in-ixgbe_remove.patch
 	patches.suse/nvme-multipath-Skip-nr_active-increments-in-RETRY-di.patch
+	patches.suse/nvme-auth-update-sc_c-in-host-response.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
 	# out-of-tree patches
