blacklist.conf: kABI

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1215,3 +1215,4 @@ eb50844d728f11e87491f7c7af15a4a737f1159d # kabi breakage
 fe24d5bc635e103a517ec201c3cb571eeab8be2f # CVE-2025-38625 https://bugzilla.suse.com/show_bug.cgi?id=1248611#c1
 cd4453c5e983cf1fd5757e9acb915adb1e4602b6 # CVE-2025-39914 https://bugzilla.suse.com/show_bug.cgi?id=1250701#c1
 b4a69f7f29c8a459ad6b4d8a8b72450f1d9fd288 # CVE-2025-39707 https://bugzilla.suse.com/show_bug.cgi?id=1249333#c1
+82ccdf062a64f3c4ac575c16179ce68edbbbe8e4 # cleanup designed to break kABI
