x86/resctrl: Refactor resctrl_arch_rmid_read() (bsc#1252734).

--- a/series.conf
+++ b/series.conf
@@ -55707,6 +55707,7 @@
 	patches.suse/powerpc-pseries-msi-Fix-potential-underflow-and-leak-issue.patch
 	patches.suse/powerpc-powernv-pci-Fix-underflow-and-leak-issue.patch
 	patches.suse/EDAC-i10nm-Skip-DIMM-enumeration-on-a-disabled-memor.patch
+	patches.suse/x86-resctrl-Refactor-resctrl_arch_rmid_read.patch
 	patches.suse/bpf-selftests-Fix-test_tcpnotify_user.patch
 	patches.suse/driver-core-PM-Set-power.no_callbacks-along-with-pow.patch
 	patches.suse/hwmon-mlxreg-fan-Separate-methods-of-fan-setting-com.patch
