x86/resctrl: Fix miscount of bandwidth event when reactivating previously unavailable RMID (bsc#1252734).

--- a/series.conf
+++ b/series.conf
@@ -55995,6 +55995,7 @@
 	patches.suse/accel-qaic-Synchronize-access-to-DBC-request-queue-h.patch
 	patches.suse/drm-xe-guc-Check-GuC-running-state-before-deregister.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
+	patches.suse/x86-resctrl-Fix-miscount-of-bandwidth-event-when-reactivat.patch
 	patches.suse/drm-amd-display-use-GFP_NOWAIT-for-allocation-in-int.patch
 	patches.suse/drm-panthor-Fix-kernel-panic-on-partial-unmap-of-a-G.patch
 	patches.suse/drm-panic-Fix-drawing-the-logo-on-a-small-narrow-scr.patch
