blacklist.conf: add git-fix that can't apply
Uses resync_offset and rdev_needs_recovery, which are not
present in our code base, and adding them would be
difficult and involve many changes, including kABI
changes.

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -580,3 +580,4 @@ f76d4c28a46a9260d85e00dafc8f46d369365d33 # Preparation for blocksize > pagesize 
 29ec9bed2395061350249ae356fb300dd82a78e7 # Hole punching on *huge* files is more restricted than it should be. Unlikely to be hit in practice.
 82e6381e23f1ea7a14f418215068aaa2ca046c84 # Unit test fix
 757fc66da91b54d4fbc414bee5c440b52560d3b7 # Comment fix
+b7ee30f0efd12f42735ae233071015389407966c # fix requires function and struct field not present: too disruptive to fix
