cifs: Fix TCP_Server_Info::credits to be signed (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11452,6 +11452,7 @@
 	patches.kernel.org/6.12.56-054-slab-Fix-obj_ext-mistakenly-considered-NULL-d.patch
 	patches.kernel.org/6.12.56-055-ACPICA-Work-around-bogus-Wstringop-overread-w.patch
 	patches.kernel.org/6.12.56-056-can-netlink-can_changelink-allow-disabling-of.patch
+	patches.kernel.org/6.12.56-057-cifs-Fix-TCP_Server_Info-credits-to-be-signed.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
