USB: serial: option: add Telit FN920C04 ECM compositions (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11491,6 +11491,7 @@
 	patches.kernel.org/6.12.56-093-platform-x86-amd-hsmp-Ensure-sock-metric_tbl_.patch
 	patches.kernel.org/6.12.56-094-USB-serial-option-add-UNISOC-UIS7720.patch
 	patches.kernel.org/6.12.56-095-USB-serial-option-add-Quectel-RG255C.patch
+	patches.kernel.org/6.12.56-096-USB-serial-option-add-Telit-FN920C04-ECM-comp.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
