io_uring: correct __must_hold annotation in io_install_fixed_file (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11483,6 +11483,7 @@
 	patches.kernel.org/6.12.56-085-drm-panic-Fix-drawing-the-logo-on-a-small-nar.patch
 	patches.kernel.org/6.12.56-086-drm-panic-Fix-qr_code-ensure-vmargin-is-posit.patch
 	patches.kernel.org/6.12.56-087-gpio-ljca-Fix-duplicated-IRQ-mapping.patch
+	patches.kernel.org/6.12.56-088-io_uring-correct-__must_hold-annotation-in-io.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
