net/mlx5e: RX, Fix generating skb from non-linear xdp_buff for striding RQ (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11431,6 +11431,7 @@
 	patches.kernel.org/6.12.56-033-selftests-net-fix-server-bind-failure-in-sctp.patch
 	patches.kernel.org/6.12.56-034-net-mlx5e-Reuse-per-RQ-XDP-buffer-to-avoid-st.patch
 	patches.kernel.org/6.12.56-035-net-mlx5e-RX-Fix-generating-skb-from-non-line.patch
+	patches.kernel.org/6.12.56-036-net-mlx5e-RX-Fix-generating-skb-from-non-line.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
