btrfs: directly free partially initialized fs_info in btrfs_check_leaked_roots() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11443,6 +11443,7 @@
 	patches.kernel.org/6.12.56-045-net-bonding-fix-possible-peer-notify-event-lo.patch
 	patches.kernel.org/6.12.56-046-dma-debug-don-t-report-false-positives-with-D.patch
 	patches.kernel.org/6.12.56-047-arch_topology-Fix-incorrect-error-check-in-to.patch
+	patches.kernel.org/6.12.56-048-btrfs-directly-free-partially-initialized-fs_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
