USB: serial: option: add Quectel RG255C (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11490,6 +11490,7 @@
 	patches.kernel.org/6.12.56-092-Bluetooth-btintel-Add-DSBR-support-for-Blazar.patch
 	patches.kernel.org/6.12.56-093-platform-x86-amd-hsmp-Ensure-sock-metric_tbl_.patch
 	patches.kernel.org/6.12.56-094-USB-serial-option-add-UNISOC-UIS7720.patch
+	patches.kernel.org/6.12.56-095-USB-serial-option-add-Quectel-RG255C.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
