drm/panic: Fix qr_code, ensure vmargin is positive (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11481,6 +11481,7 @@
 	patches.kernel.org/6.12.56-083-hwmon-sht3x-Fix-error-handling.patch
 	patches.kernel.org/6.12.56-084-nbd-override-creds-to-kernel-when-calling-soc.patch
 	patches.kernel.org/6.12.56-085-drm-panic-Fix-drawing-the-logo-on-a-small-nar.patch
+	patches.kernel.org/6.12.56-086-drm-panic-Fix-qr_code-ensure-vmargin-is-posit.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
