objtool/rust: add one more `noreturn` Rust function (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11500,6 +11500,7 @@
 	patches.kernel.org/6.12.56-102-binder-remove-invalid-inc-weak-check.patch
 	patches.kernel.org/6.12.56-103-comedi-fix-divide-by-zero-in-comedi_buf_munge.patch
 	patches.kernel.org/6.12.56-104-mei-me-add-wildcat-lake-P-DID.patch
+	patches.kernel.org/6.12.56-105-objtool-rust-add-one-more-noreturn-Rust-funct.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
