drm/panic: Fix drawing the logo on a small narrow screen (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11480,6 +11480,7 @@
 	patches.kernel.org/6.12.56-082-riscv-hwprobe-avoid-uninitialized-variable-us.patch
 	patches.kernel.org/6.12.56-083-hwmon-sht3x-Fix-error-handling.patch
 	patches.kernel.org/6.12.56-084-nbd-override-creds-to-kernel-when-calling-soc.patch
+	patches.kernel.org/6.12.56-085-drm-panic-Fix-drawing-the-logo-on-a-small-nar.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
